Fixed train strings error. Updated error message.

--- a/locales/en/messages.json
+++ b/locales/en/messages.json
@@ -3,7 +3,7 @@
     "id": 0,
     "patterns": [],
     "responses": [
-      "Sorry I haven't learned that yet."
+      "Sorry I haven't learned that yet. Bu I will learn soon :)"
     ]
   },
   {
