--- a/locales/tr/messages.json
+++ b/locales/tr/messages.json
@@ -3,7 +3,7 @@
     "id": 0,
     "patterns": [],
     "responses": [
-      "Üzgünüm bunu daha öğrenmedim. Ama yakında öğrenirim :)"
+      "Üzgünüm bunu daha öğrenmedim. Ama yakında öğrenirim 😊"
     ]
   },
   {
